--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="bilprospekt bilvision bilförsäljning" />
     <!--<link rel="apple-touch-icon" href="logo192.png" />-->
     <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
-    <title>Bilprospekt</title>
+    <title>Bilprospekt 3.0</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
